<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_pkgs</name>
  <version>0.0.1</version>
  <description>The mujoco_ros_pkgs package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mujoco2rviz</exec_depend>
  <exec_depend>mujoco_manual_tests</exec_depend>
  <exec_depend>mujoco_ros_control</exec_depend>
  <exec_depend>mujoco_ros_msgs</exec_depend>
  <exec_depend>mujoco_ros_utils</exec_depend>

  <export>
  </export>
</package>
